--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
-    <title>Nike Go Wild Panther series</title>
+    <title>Nike Go Wild: Panthera series</title>
   </head>
   <body>
     <div id="page-wrapper">
@@ -44,8 +44,9 @@
 <h1>Nike Grand Slam</h1>
 <p class="description" id="nike-grand-slam-description"> Validated by the greats of the game, the Grand Slam is here. Lower to the court and loaded with speed components, it helps you play at a fast pace with enough support to keep you bobbing and weaving for sets on end.</p>
 </div>
+  <div class="iframe">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/0yO7xLAGugQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="video"></iframe>
-
+  </div>
 <div id="purchase">
   <div class="purchase box1">
     <p>Nike Bolt</p>
